2004-07-24  Florian Boor  <florian.boor@kernelconcepts.de>

	* editing.c: Some improvement in dialog layout.
	* contacts-layout.xml: Optimisations for small screens, split up in "home"
	                       and "work" address page. 

2004-07-23  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Fixed bug in screen size detection.

2004-07-16  Florian Boor  <florian.boor@kernelconcepts.de>

    * Version 0.23 released

2004-07-14  Florian Boor  <florian.boor@kernelconcepts.de>
    
    * main.c: Activate search field whenever main window is activated.
    * main.c: Added command line switch "-n" to turn off configuration dialog.
    * editing.c: on_edit_bt_image_clicked(): Dialog is now modal.
    * po/es.po: Added file to avoid build error.
    * editing.c: Improved date settings.
    * control1: Changed version number of libgpewidget we depend on to 0.86.
    * main.c: Format date according to current locale settings.

2004-07-13  Florian Boor  <florian.boor@kernelconcepts.de>

    * editing.c: Finished handling of direction keys.
    * editing.c: Implementation for dynamic built images.
    * editing.c: Fixed image handling.
    * editing.c: Several minor fixes.
    * editing.c: Started experimental keyboard navigation improvement.
    * *xml: Changed order and minor fixes.

2004-07-12  Florian Boor  <florian.boor@kernelconcepts.de>

    * editing.c: Improved keyboard navigation in edit dialog.
    * editing.c: Fixed image selection.
    * editing.c: Some formating changes. 
    * main.c, main.h: Detect and publish information flags about screen.
    * editing.c: edit_window() Removed old cruft.
    * editing.c, structure.c, Makefile: Added alternate layout for larger 
                                        screens.
    * contacts-layout-bigscreen.xml: New file.
    * structure.*: New item types: Images and dates.
    * editing.c: several changes for a more flexible layout.

2004-07-09  Florian Boor  <florian.boor@kernelconcepts.de>
